--- a/项目简介.md
+++ b/项目简介.md
@@ -6,24 +6,24 @@
 
 1、作者管理页面
 
-![作品管理](C:\Users\ruanjingfeng\Desktop\论文图\作品管理.PNG)
+![作品管理](C:\Users\ruanjingfeng\Desktop\论文相关\作品管理.PNG)
 
 2、作品详情管理页面
 
-![作品详情管理](C:\Users\ruanjingfeng\Desktop\论文图\作品详情管理.PNG)
+![作品详情管理](C:\Users\ruanjingfeng\Desktop\论文相关\作品详情管理.PNG)
 
 3、消息通知页面
 
-![消息通知](C:\Users\ruanjingfeng\Desktop\论文图\消息通知.PNG)
+![消息通知](C:\Users\ruanjingfeng\Desktop\论文相关\消息通知.PNG)
 
 4、用户页面
 
-![精选页面](C:\Users\ruanjingfeng\Desktop\论文图\精选页面.PNG)
+<img src="C:\Users\ruanjingfeng\Desktop\论文相关\精选页面.PNG" alt="精选页面" style="zoom: 50%;" />
 
 5、小说详情页面
 
-![小说详情](C:\Users\ruanjingfeng\Desktop\论文图\小说详情.PNG)
+<img src="C:\Users\ruanjingfeng\Desktop\论文相关\小说详情.PNG" alt="小说详情" style="zoom:50%;" />
 
 6、阅读页面
 
-![阅读页面](C:\Users\ruanjingfeng\Desktop\论文图\阅读页面.PNG)
+<img src="C:\Users\ruanjingfeng\Desktop\论文相关\精选页面.PNG" alt="精选页面" style="zoom: 50%;" />
