--- a/项目简介.md
+++ b/项目简介.md
@@ -6,7 +6,7 @@
 
 1、作者管理页面（图片暂时还不能显示，具体放在img文件夹中）
 
-![image][https://github.com/r1025145712/books/raw/master/img/%E4%BD%9C%E5%93%81%E7%AE%A1%E7%90%86.PNG](https://github.com/r1025145712/books/raw/master/img/作品管理.PNG)
+![Image][https://github.com/r1025145712/books/blob/master/img/%E4%BD%9C%E5%93%81%E7%AE%A1%E7%90%86.PNG](https://github.com/r1025145712/books/blob/master/img/作品管理.PNG)
 
 ![作品管理](C:\Users\ruanjingfeng\Desktop\论文相关\作品管理.PNG)
 
